# this-is-the-world-ingestion

./: .gitignore  Dockerfile  README.MD  README.md  build.sbt  data-details.md  docker-compose.yml  run-dev  stack.yaml  tw-ingestion.cabal
auto/: build  dev-environment  ghci  outdated  release  test
src/: Lib.hs
src/main/scala/: CountryDetailToJson.scala  CountryDetailsToAggregateDetail.scala  Db.scala  DocToCountries.scala  DocToCountriesTime.scala  DocToCountryDetails.scala  DocToCountryPopulationDetails.scala  Entry.scala  FetchDatabase.scala  LoadIntoPdfBox.scala  LoadIntoPoi.scala  Regions.scala  RetrieveFileAsStream.scala  StringToInputStream.scala  WorkbookToCountries.scala  WriteStringToFile.scala  hello.scala  models.scala
src/main/scala/aggregator/: Other10PercentWealthAggregator.scala  Other1PercentWealthAggregator.scala  Other90PercentWealthAggregator.scala  Other99PercentWealthAggregator.scala  OtherTotalPopulationAggregator.scala  OtherTotalWealthAggregator.scala  Wenao1PercentWealthAggregator.scala  Wenao99PercentWealthAggregator.scala  WenaoTotalPopulationAggregator.scala  WenaoTotalWealthAggregator.scala
src/main/scala/fetch/: FetchDatabase.scala
src/main/scala/models/: AggregateDetails.scala  Country.scala  CountryData.scala  CountryDetail.scala  CountryPopulationDetail.scala  CountryWealthBracketDetail.scala  WealthBracket.scala  WealthBracketType.scala  WealthDetails.scala
src/main/scala/processors/: IsWenao.scala  IsWenaoProcessor.scala  Population.scala  PopulationProcessor.scala  WealthBrackets.scala  (+3 more)
support/dev/: Dockerfile
(+9 files in other folders)
