name:                tw-ingestion
version:             0.1.0.0
synopsis:            Ingest data into tw
description:         Please see README.md
homepage:            https://github.com/open-socialism/tw-ingestion
author:              AlitairB
maintainer:          AlitairB
copyright:           2016 Author name here
category:            Script
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                       , xlsx
                    --  , aeson
                    --  , servant-server
                    --  , wai
                    --  , warp
  default-language:    Haskell2010

executable tw-ingestion-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tw-ingestion
  default-language:    Haskell2010

test-suite tw-ingestion-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tw-ingestion
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/tw-ingestion
